--- a/cs7800-f25/hw/hw1.tex
+++ b/cs7800-f25/hw/hw1.tex
@@ -180,7 +180,7 @@
 \newcommand{\problemitem}{\renewcommand{\labelenumi}{{\bfseries \em Problem \arabic{enumi}}}\item}
 \newcommand{\solutionitem}{\renewcommand{\labelenumi}{{\bfseries \em Solution \arabic{enumi}}}\addtocounter{enumi}{-1}\item}
 
-\input{collab-policy}
+%\input{collab-policy}
 
 \paragraph{Assigned Problems}
 \begin{enumerate}[leftmargin=0pt, itemsep=3ex]
